_sass/main.scss
/*
*
* GENERAL STYLES
*
*/
html {
	font-size: 100%;
}

body, input {
	font-family: 'Roboto', Helvetica, Arial, sans-serif;
}

body {
	font-size: 16px;
	font-weight: 400;
	line-height: 1.65;
	color: $black-font-color;
	margin: 0px;
}

a {
	text-decoration: none;
	color: $blue-link-color;
}

header > div, main > section > div {
	max-width: $content-width;
}

h1, h2, h3, h4, h5 {
	font-weight: 400;
}

p.center {
	text-align: center;
}

/*
*
* BUTTONS
*
*/

button {
	font-size: inherit;
	line-height: inherit;
	cursor: pointer;
}

a.btn, button.btn {
	display: inline-block;
	padding: 6px 20px;
	border: 1px solid transparent;
	color: inherit;
	box-shadow: $shadow;
}

a.btn-flat {
	border: 1px solid $white-border-color;

	&:hover {
		color: $black-font-color;
		background-color: $white-background-color;	
	}
}

a.btn-primary, button.btn-primary {
	background-color: $primary-color;
	color: $white-font-color;

	&:hover {
		background-color: $primary-darker-color;
	}
}

a.btn-secondary, button.btn-secondary {
	background-color: $secondary-color;
	color: $black-font-color;

	&:hover {
		background-color: $primary-color;
	}
}

/*
*
* SECTIONS
*
*/

main {
	margin-top: -$header-height;
	& > section {
		display: flex;
		justify-content: center;

		&:first-child > div {
			margin-top: $header-height;
		}

		& > div {
			padding: 80px 40px;
			width: 100%;

			& > h2 {
				font-size: 2em;
				text-align: center;
				margin-top: 0px;
				margin-left: 40px;
				margin-right: 40px;
			}

			& > p {
				text-align: center;
				margin-bottom: 2em;
			}

			h3 {
				font-size: 1.5em;
				text-align: center;
				margin-left: 40px;
				margin-right: 40px;
			}
		}
	}
}

section.bg-image {
	background-position: 50% 50%;
	background-size: cover;
}

section.bg-blue {
	background-image: $blue-gradient;
}

section.bg-black {
	background-color: $dark-grey-background-color;
}

section.bg-grey {
	background-color: $light-grey-background-color;
}

section.bg-dark-grey {
	background-color: $medium-grey-background-color;
}

section.font-white {
	color: $white-font-color;
}

section.top-section > div {
	padding-bottom: 50px;
	padding-top: 120px;

	& > h1 {
		font-size: 3em;
		margin: 0px;
		text-align: left;

		span.no-break {
			white-space: nowrap;
		}
	}

	& > p {
		font-size: 1.2em;
	}
}

/**
 *
 * newsletter
 *
 */
main > section.newsletter {
	& > div {
		padding-top: 30px;
		text-align: center;

		& > form {
			display: block;
			display: flex;
			justify-content: center;
			align-items: center;

			& > * {
				margin: 10px;
			}

			input {
				width: 80%;
				max-width: 240px;
				padding: 10px;
				font-size: 1em;
			}
		}
	}
}

/**
 *
 * 404 error
 *
 */
section.error404 {
 	& > div {
 		text-align: center;

 		& > h1 {
 			font-size: 4em;
 		}

 		& > p {
 			font-size: 2em;
 		}
 	}
}

/**
 * COLUMNS
 */
div.columns {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	text-align: center;

	& > * {
		flex: 1 1 0;
		min-width: 240px;
		margin: 1em 20px;
	}

	ul {
		display: inline-block;
	}

	& > .column-stretched {
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: center;
	}
}

/**
 * Icons
 */
i.la {
	&.header {
		font-size: 3em;

		& ~ h3 {
			margin-top: 0px;
		}
	}

	&.blue {
		color: $blue-font-color;
	}
}

/**
 * Forms
 */
form {

	& > label {
		display: flex;
		flex-direction: column;
		font-size: 0.7em;
		margin-bottom: 20px;

		& > input, textarea, select {
			font-size: 1.3em;
			padding: 0.4em;
			border: 1px solid $grey-border-color;
			border-radius: $border-radius;
			position: relative;

			&:focus {
				border-color: $primary-color;
				outline-width: 0;
			}

			&:required {
				&:after {
					content: 'abc';
					position: absolute;
					left: -10px;
					width: 20px;
					height: 20px;
					background-color: yellow;
				}
			}
		}

		& > input, select {
			max-width: 30em;
			-webkit-box-sizing: border-box;
       		-moz-box-sizing: border-box;
            box-sizing: border-box;
		}

		& > textarea {
			min-height: 10em;
			font-family: inherit;
		}
	}

	& > button {

	}
}

/**
 * cookie info
 */
div#cookie-info {
	position: fixed;
	bottom: 0px;
	left: 0px;
	right: 0px;
	background-color: $dark-grey-background-color;
	color: $white-font-color;
	padding: 2em;
	box-shadow: $shadow-top;
	display: none;
	align-items: center;
	justify-content: center;
	transition: opacity 2s ease-in;

	&.show {
		display: flex;
	}
	
	& > * {
		margin: 0em 1em;
	}
}


@media only screen and (max-width: 1000px) {
	section.top-section > div {

		& > h1 {
			font-size: 2em;
		}

		& > p {
			font-size: 1em;
		}
	}

	main > section > div {
		padding-left: 20px;
		padding-right: 20px;
	}

	main > section.newsletter > div > form {
		flex-direction: column;


	}

	div#cookie-info {

		&.show {
			flex-direction: column;
		}

		& > * {
			margin: 0.5em 0.5em;
		}
	}
}

